--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@
   <meta content='{{ site.title }}' property='og:title'>
   <title>{{ site.title }}</title>
   <link href='/assets/common.css' rel='stylesheet' type='text/css' />
+  <link href='/assets/style.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
   <div class="warpper">
